--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
         <link rel="stylesheet" href="./styles.css">
         <script src="./rps.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="main">
+            <div id="mode">
+                <div class="mode text">Light mode or dark mode: </div>
+                <label id="wrapper" for="switch">
+                    <input type="checkbox" id="switch" name="switch">
+                    <div id="fill"></div>
+                </label>
+            </div>
+            <div id="game">
+                
+            </div>
+            <div id="bottom"></div>
+        </div>
+    </body>
 </html>
