updated some stuff

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body>
         <div id="main">
             <div id="mode">
-                <div class="mode text">Light mode or dark mode: </div>
+                <!-- <div class="mode text">Light mode or dark mode: </div>
                 <label id="wrapper" for="switch">
                     <input type="checkbox" id="switch" name="switch">
                     <div id="fill"></div>
-                </label>
+                </label> -->
             </div>
             <div id="game">
 
