--- a/index.html
+++ b/index.html
@@ -1,62 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Rock Paper Scissors</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles.css">
-        <script src="https://kit.fontawesome.com/7ec95a532d.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div id="main">
-            <div id="mode">
-                <!-- <div class="mode text">Light mode or dark mode: </div>
+  <head>
+    <title>Rock Paper Scissors</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/7ec95a532d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div id="main">
+      <div id="mode">
+        <!-- <div class="mode text">Light mode or dark mode: </div>
                 <label id="wrapper" for="switch">
                     <input type="checkbox" id="switch" name="switch">
                     <div id="fill"></div>
                 </label> -->
-            </div>
-            <div id="game">
-
-                <div id="main-text" class="text">Rock, Paper, Scissors. First to 5. <span class="tertiary">Ready?</span></div>
-
-                <div id="tracker">
-                    <div class="scoreboard">
-                        <div class="player name">PLAYER</div>
-                        <div class="player points">0</div>
-                        <div class="player icon"></div>
-                    </div>
-
-                    <div class="vs text">VS</div>
-
-                    <div class="scoreboard">
-                        <div class="computer name">COMPUTER</div>
-                        <div class="computer points">0</div>
-                        <div class="computer icon"></div>
-                    </div>
-                </div>
-
-                <div id="button-wrapper">
-                    <div class="option">
-                        <button class="rock button" type="button"><i class="rock fa-regular fa-hand-back-fist fa-8x"></i></button>
-                        <p class="choice text">Rock</p>
-                    </div>
-                    
-                    <div class="option">
-                        <button class="paper button" type="button"><i class="paper fa-regular fa-hand fa-8x"></i></button>
-                        <p class="choice text">Paper</p>
-                    </div>
-
-                    <div class="option">
-                        <button class="scissors button" type="button"><i class="scissors fa-regular fa-hand-scissors fa-8x"></i></button>
-                        <p class="choice text">Scissors</p>
-                    </div>
-                    
-                </div>
-                <button id="reset" class="text">Reset Game</button>
-            </div>
-            <div id="bottom"></div>
+      </div>
+      <div id="game">
+        <div id="main-text" class="text">
+          Rock, Paper, Scissors. First to 5.
+          <span class="tertiary">Ready?</span>
         </div>
-    </body>
-    <script src="./rps.js"></script>
+
+        <div id="tracker">
+          <div class="scoreboard">
+            <div class="player name">PLAYER</div>
+            <div class="player points">0</div>
+            <div class="player icon"></div>
+          </div>
+
+          <div class="vs text">VS</div>
+
+          <div class="scoreboard">
+            <div class="computer name">COMPUTER</div>
+            <div class="computer points">0</div>
+            <div class="computer icon"></div>
+          </div>
+        </div>
+
+        <div id="button-wrapper">
+          <div class="option">
+            <button class="rock button" type="button">
+              <i class="rock fa-regular fa-hand-back-fist fa-8x"></i>
+            </button>
+            <p class="choice text">Rock</p>
+          </div>
+
+          <div class="option">
+            <button class="paper button" type="button">
+              <i class="paper fa-regular fa-hand fa-8x"></i>
+            </button>
+            <p class="choice text">Paper</p>
+          </div>
+
+          <div class="option">
+            <button class="scissors button" type="button">
+              <i class="scissors fa-regular fa-hand-scissors fa-8x"></i>
+            </button>
+            <p class="choice text">Scissors</p>
+          </div>
+        </div>
+        <button id="reset" class="text">Reset Game</button>
+      </div>
+      <div id="bottom"></div>
+    </div>
+  </body>
+  <script src="./rps.js"></script>
 </html>
